<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KPCC Radio</string>

    <string name="kpcc_live">KPCC Live</string>
    <string name="kpcc_pfs">KPCC Pledge-Free Stream</string>
    <string name="programs">Programs</string>
    <string name="headlines">Headlines</string>
    <string name="wake_sleep">Wake / Sleep</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="settings">Settings</string>
    <string name="schedule">Schedule</string>

    <string name="contact_us">Contact Us</string>
    <string name="ok">OK</string>

    <string name="up_next_program">Up Next: %s</string>
    <string name="live_program">Live: %s</string>
    <string name="now_playing_program">Now Playing: %s</string>
    <string name="now_playing">Now Playing</string>

    <string name="sleep_timer">Sleep Timer</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="set_alarm_time">Set Alarm Clock</string>
    <string name="cancel_alarm">Cancel Alarm Clock</string>
    <string name="start_sleep_timer">Start Sleep Timer</string>
    <string name="cancel_sleep_timer">Cancel Sleep Timer</string>
    <string name="will_wake_on">Will Wake On:</string>
    <string name="timer_hr">h</string>
    <string name="timer_min">m</string>
    <string name="timer_sec">s</string>
    <string name="remaining">Remaining</string>

    <string name="recent_episodes">Recent Episodes</string>
    <string name="share_episode">Share this Program</string>
    <string name="audio_default_time">0:00:00</string>
    <string name="time_separator">/</string>

    <string name="play_audio">Play Audio</string>
    <string name="pause_audio">Pause Audio</string>
    <string name="back_30s">Back 30 seconds</string>
    <string name="forward_30s">Forward 30 seconds</string>
    <string name="rewind_start">Rewind to the start of this show</string>
    <string name="back_to_live">Back to Live</string>
    <string name="behind_live">behind live</string>
    <string name="minuteShort">m</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hourShort">h</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="feedback_header_reason">Reason for Inquiry</string>
    <string name="feedback_header_comments">Comments</string>
    <string name="feedback_header_details">Your Details</string>
    <string name="feedback_type_bug">Bug</string>
    <string name="feedback_type_suggestion">Suggestion</string>
    <string name="feedback_type_feedback">General Feedback</string>
    <string name="feedback_hint_name">Name</string>
    <string name="feedback_hint_email">Email</string>
    <string name="feedback_placeholder_comments">Add your comments here</string>
    <string name="feedback_submit">Submit</string>
    <string name="feedback_validation_message">All Fields are Required</string>
    <string name="feedback_success_message">Thank you for your feedback!</string>

    <string name="live">Live</string>
    <string name="up_next">Up Next</string>

    <string name="advertisement">Advertisement</string>
    <string name="preroll_message">A KPCC Underwriter Message</string>

    <string name="audio_error">Stream Error</string>
    <string name="network_error">No Internet Available</string>
    <string name="load_error">There was an error loading the data. Please try again in a few minutes.</string>
    <string name="feedback_error_message">There was an error submitting your feedback. Please e-mail mobilefeedback@scpr.org.</string>

    <string name="pref_title_push_notifications">Push Notifications</string>
    <string name="pref_desc_push_notifications">Receive alerts when breaking news events are happening.</string>

    <!--KPCC Plus-->
    <string name="kpccplus">KPCC Plus</string>
    <string name="kpccplus_token_header">Are you a KPCC Member?</string>
    <string name="kpccplus_token_text">Enter your pledge drive token to gain access to the pledge-free stream.</string>
    <string name="kpccplus_token_placeholder">Enter your pledge token</string>
    <string name="kpccplus_success">Success!</string>
    <string name="kpccplus_unlock">You\'ve unlocked your access to the KPCC pledge-free stream. Enjoy!</string>
    <string name="kpccplus_close">Close and start listening</string>
    <string name="kpccplus_failure_dialog_message">Uh-oh! We can\'t seem to find a match! The token you entered wasn\'t found in our system. Please try again or get in touch with our membership help desk.</string>
    <string name="kpccplus_failure_email_subject">My Pledge Token isn\'t working on the Android app.</string>
    <string name="kpccplus_failure_email_body">Hello, I ran into some trouble entering my pledge token into the Android app.\n\nThe token I entered was: %s\n\nThank you!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
